Fix: Background video on smaller screens

--- a/src/v1.1/components/GlobalHeader/globalHeader.sass
+++ b/src/v1.1/components/GlobalHeader/globalHeader.sass
@@ -48,7 +48,9 @@
         &:active
           background-color: $acid-yellow
           background-image: url($menu-icon-dark)
-
+      &.whiteRed
+        background-color: $spark-red
+        background-image: url($menu-icon)
 
 // XLarge
 +render-to($media-xl)
