--- a/src/v1.1/pages/HowItWorks/Banner/banner.sass
+++ b/src/v1.1/pages/HowItWorks/Banner/banner.sass
@@ -130,8 +130,6 @@
       grid-column: 1/span 6
     &__video1
       height: 535px
-      video
-        height: 600px !important
     &__aside
       margin-left: $hspace-xs
     &__asideWrap
@@ -153,8 +151,6 @@
         margin-bottom: $margin-thin
     &__video1
       height: 440px
-      video
-        height: 450px !important
     &__texture2
       height: 8px
 
